# agentic_dev_cycle

./: README.md  install.sh
core/: create_issues.py  gates.sh  gates_config.sh  issue_template.md  project.yaml  workflow.md
core/agents/deploy/: base.md  custom.md
core/agents/design/: base.md  custom.md
core/agents/fix/: base.md  custom.md
core/agents/init/: base.md  custom.md
core/agents/review/: base.md  custom.md
core/langgraph_design/: README.md  pyproject.toml
core/langgraph_design/common/: __init__.py  agent.py  issue.py  phases.py  project.py  project_yaml.py  shell.py  strings.py  types.py
core/langgraph_design/design_graph/: __init__.py  __main__.py  cli.py  graph.py  state.py
core/langgraph_design/init_graph/: __init__.py  apply.py  cli.py  graph.py  prompt.md  prompt.py  state.py
core/langgraph_design/queue_graph/: __init__.py  graph.py  state.py
core/skills/complete/: SKILL.md
core/skills/create_tasks/: SKILL.md
core/skills/deploy/: SKILL.md
core/skills/design/: SKILL.md
core/skills/fix/: SKILL.md
core/skills/init-dev-cycle/: SKILL.md
core/skills/queue/: SKILL.md
core/skills/review/: SKILL.md
dev_cycle/: gates.sh  gates_config.sh  issue_template.md  project.md  workflow.md
dev_cycle/agents/: build_agent.md  deploy_agent.md  design_agent.md  fix_agent.md  review_agent.md
dev_cycle/skills/deploy/: SKILL.md
dev_cycle/skills/design/: SKILL.md
skills/complete/: SKILL.md
skills/deploy/: SKILL.md
skills/design/: SKILL.md
skills/fix/: SKILL.md
skills/init-dev-cycle/: SKILL.md
skills/review/: SKILL.md
(+3 files in other folders)
